<resources>


    <string name="app_name">Wallzy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="status">Status</string>
    <string name="login">Login</string>
    <string name="dummy_password">starpay</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="dummy_number">+631091010911</string>
    <string name="or">--------------OR--------------</string>
    <string name="Welcome_to_wallzy">Welcome</string>
    <string name="Welcome_message">Welcome to the world of best wallpapers.</string>
    <string name="lets_start">Lets Get Started</string>
    <string name="ok">Ok</string>
    <string name="file_provider_authority">io.hustler.wallzy.fileprovider</string>
    <string name="notication_channel_desc">Wallpaper Download Channel</string>
    <string name="storage_permission_rejected_message">Storage Permission is required for downloading Walpapers</string>
    <string name="DB_LATEST_IMAGE_NODE">LatestImages</string>
    <string name="dummy_category">Dummy Category</string>
    <string name="transistion_blur_image">tran_blur_image</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="About">About</string>
    <string name="Signout">SignOut</string>
    <string name="NO_CONNECTION_ERROR">Connection unavailable</string>
    <string name="TIMEOUT_ERROR">Took too long to respond</string>
    <string name="AUTH_FAILURE_ERROR">Authorisation failed</string>
    <string name="SERVER_ERROR">Unexpected Error  At Server</string>
    <string name="NETWORK_ERROR">Network is\'nt working properly</string>
    <string name="PARSE_ERROR">Invalid data parse error</string>

    <string name="server_client_id">1055557239870-ue8iqi0qucq6ho6onttnthc7k0pqhqka.apps.googleusercontent.com</string>
    <string name="category">Category</string>
    <string name="collection">Collection</string>
    <string name="name">Name</string>
    <string name="upload">Upload</string>
    <string name="Gallery">Launch Gallery</string>
    <string name="Images">Upload Images</string>
    <string name="covers">Covers</string>
    <string name="link">Credit Link</string>
    <string name="artist_curated">Artist Curated</string>
    <string name="categories">Categories</string>
    <string name="collection_name">Collection Name</string>
    <string name="_504_images">504 Images</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="guest_login">Guest login</string>
    <string name="error_msg_something_went_wrong">Oops.. Something Went wrong</string>
    <string name="error_msg_no_data_found">Oops.. No Data Found</string>
    <string name="search_here">Search here</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="changes_wallpaper_automatically">Changes Wallpaper Automatically</string>
    <string name="daily_wallpaper">Daily Wallpaper</string>
    <string name="Time_interval">Choose Time Gap</string>
    <string name="TImegap_message">Time gap between Each Wallpaper change</string>
    <string name="_12_hrs">12 Hrs</string>
    <string name="Love">Love</string>
    <string name="wall_cat_message">Shows Wallpapers From chosen Category</string>
    <string name="Category">Choose Category</string>
    <string name="only_on_wifi">Show on Wifi</string>
    <string name="shows_only_on_wifi">Chnages Images Only On Wifi</string>
    <string name="Daily_notifications">Daily Notifications</string>
    <string name="wallpaper_reminder">Reminds you to change wallpaper daily twice.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="Message">Message</string>
    <string name="Title">Title</string>
    <string name="Announcement_notifications">Announcements</string>
    <string name="Update_notifications">Updates</string>
    <string name="Wishes_notifications">Wishes</string>
    <string name="manula_notifications">Manual Notifications</string>
    <string name="reache_end">REACHED END</string>
    <string name="more_images_for_you">More images for you</string>
    <string name="thats_all_for_now">That\'s all for now</string>
    <string name="unsubscribe">UnSubscribe</string>
    <string name="subscribe">Subscribe</string>

    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">This is a Fun Project. :D</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_message"><![CDATA[<h3><b>All the wallpapers in this app are under common creative license and the credit goes to their respective owners.
     </b></h3><br></br>These images are not endorsed by any of the prospective owners,
     and the images are used simply for aesthetic purposes.<br></br>
     <br>No copyright infringement is intended,
     and any request to remove one of the images/logos/names will be honored.]]></string>
    <string name="copyright">©️Copyright</string>
    <string name="copyright_message"><![CDATA[<b>Sayi built the Wallzy app as a Free app.</b><br><br>
     This SERVICE is provided by Sayi at no cost and is intended for use as is. But We Still Push Ads on the app to generate revenue. 
     <br><br>This information is used to inform visitors regarding my policies with the collection, use,
     and disclosure of Personal Information if anyone decided to use my Service. <br><br>If you choose to use my Service, then you
     agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for
     providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
     <br><br>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Wallzy
     unless otherwise defined in this Privacy Policy.If you find any Wallpaper or Work created by you has been used in the app please let us know by
     <a href="mailto:quotzyapp@gmail.com?subject= wallzy copyright Issue">emailing us.</a> We will remove the content as soon as possible. 
     The wallpapers are uploaded by many users so it\'s not possible to make every image copyright free.]]></string>
    <string name="info_collection">Information Collection and Use</string>
    <string name="info_collection_message"><![CDATA[For a better experience, while using our Service, 
    I may require you to provide us with certain personally identifiable information, including but not limited to Nothing. 
    The information that I request will be retained on your device and is not collected by me in any way. <br><br>The app 
    does use third-party services that may collect information used to identify you. <br><br>Link to the privacy policy 
    of third party service providers used by the app <br><br><b>Google Play Services</b> <br><br><b>Log Data</b> <br><br>I
    want to inform you that whenever you use my Service, in the case of an error in the app I collect data and information
    (through third party products) on your phone called Log Data. This Log Data may include information such as your device
    Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my
    Service, the time and date of your use of the Service, and other statistics. <br><br><b>Cookies</b> <br><br>Cookies are
    files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser
    from the websites that you visit and are stored on your device\'s internal memory. <br><br>This Service does not use these
    “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and
    improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent
    to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. <br><br><b>
    Service Providers</b> <br><br>I may employ third-party companies and individuals due to the following reasons: <br><br>To
    facilitate our Service; <br><br>To provide the Service on our behalf; <br><br>To perform Service-related services; or
    <br><br>To assist us in analyzing how our Service is used. <br><br>I want to inform users of this Service that these
    third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf.
    However, they are obligated not to disclose or use the information for any other purpose. <br><br><b>Security</b> <br><br>I
    value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting
    it. But remember that no method of transmission over the internet, or method of electronic storage is 100%% secure and reliable,
    and I cannot guarantee its absolute security. <br><br><b>Links to Other Sites</b> <br><br>This Service may contain links to other
    sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me.
    Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for
    the content, privacy policies, or practices of any third-party sites or services. <br><br><b>Children\'s Privacy</b> <br><br>These Services
    do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case
    I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent
    or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
    <br><br>Changes to This Privacy Policy <br><br>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically 
    for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after 
    they are posted on this page. <br><br><b>Contact Us</b> <br><br>If you have any questions or suggestions about my Privacy Policy, do not hesitate 
    to contact me.]]></string>
    <string name="self_desc"><![CDATA[Wallzy is made with passion and hard-work to have all great art works and artists under one platform..<br /><br/><b>Thanks For Using My Application <br><br/>🥰🥰🥰</b>]]></string>
    <string name="about">About</string>

</resources>
