<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.SettingsActivity"
    android:background="@color/bg"
    android:id="@+id/root">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Settings"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:titleTextColor="@color/text_color"
        android:background="@color/bg" />

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_wallpaper"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changes_wallpaper_automatically"
            android:layout_below="@id/title"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_12"
            android:textColor="@color/text_color"
            android:alpha="0.5" />

        <Switch
            android:id="@+id/daily_wall_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:theme="@style/SwitchTheme"
            android:layout_centerVertical="true"
            android:checked="false"
            android:layout_marginRight="@dimen/margin_16" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginTop="@dimen/margin_8">

        <TextView
            android:id="@+id/TimeGap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time_interval"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/TimeGap_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TImegap_message"
            android:layout_below="@id/TimeGap"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_12"
            android:textColor="@color/text_color"
            android:alpha="0.5" />

        <TextView
            android:id="@+id/TimeGap_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:theme="@style/SwitchTheme"
            android:padding="@dimen/padding_4"
            android:layout_centerVertical="true"
            android:text="@string/_12_hrs"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_marginRight="@dimen/margin_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_below="@id/layout2">

        <TextView
            android:id="@+id/wallCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Category"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/wall_cat_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wall_cat_message"
            android:layout_below="@id/wallCat"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_12"
            android:textColor="@color/text_color"
            android:alpha="0.5" />

        <TextView
            android:id="@+id/wallcat_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:padding="@dimen/padding_4"
            android:text="@string/Love"
            android:layout_centerVertical="true"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_marginRight="@dimen/margin_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_below="@id/layout3">

        <TextView
            android:id="@+id/onWifi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_on_wifi"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/on_wifi_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shows_only_on_wifi"
            android:layout_below="@id/onWifi_tv"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_12"
            android:textColor="@color/text_color"
            android:alpha="0.5" />

        <CheckBox
            android:id="@+id/on_wifi_tv_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:textColor="@color/colorAccent"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_16" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/space1"
        android:layout_below="@id/layout4"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/rounded_rect_blue"/>
    <RelativeLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space1">

        <TextView
            android:id="@+id/Daily_notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daily_notifications"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/Daily_notification_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallpaper_reminder"
            android:layout_below="@id/Daily_notification_title"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_16"
            android:textSize="@dimen/text_12"
            android:textColor="@color/text_color"
            android:alpha="0.5" />

        <Switch
            android:id="@+id/daily_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:theme="@style/SwitchTheme"
            android:layout_centerVertical="true"
            android:checked="false"
            android:layout_marginRight="@dimen/margin_16" />

    </RelativeLayout>

</RelativeLayout>